# sprout

./: .gitignore  .release-plz.toml  CNAME  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  index.html  rust-toolchain.toml  style.css
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug-report.yml  config.yaml  config.yml  feature-request.yml
.github/codeql/: codeql-config.yaml  rust-extractor.yaml
.github/workflows/: check.yaml  ci-actions.yaml  ci-actions.yml  ci-code.yaml  ci-code.yml  codeql.yaml  codeql.yml  publish.yaml  publish.yml  release-assets.yaml  release.yaml  release.yml  zizmor.yaml
boot/: Dockerfile
crates/bls/: Cargo.toml
crates/bls/src/: lib.rs
crates/boot/: Cargo.toml  README.md  build.rs
crates/boot/src/: actions.rs  autoconfigure.rs  config.rs  context.rs  drivers.rs  entries.rs  extractors.rs  main.rs  menu.rs  options.rs  phases.rs  utils.rs
crates/boot/src/actions/: chainload.rs  edera.rs
crates/boot/src/autoconfigure/: bls.rs  linux.rs  windows.rs
crates/boot/src/config/: loader.rs
crates/boot/src/generators/: bls.rs  list.rs  matrix.rs
crates/boot/src/options/: parser.rs
crates/boot/src/utils/: vercmp.rs
crates/config/: Cargo.toml
crates/config/src/: actions.rs  drivers.rs  entries.rs  extractors.rs  generators.rs  lib.rs  phases.rs
crates/config/src/actions/: chainload.rs  edera.rs  print.rs
crates/config/src/extractors/: filesystem_device_match.rs
crates/config/src/generators/: bls.rs  list.rs  matrix.rs
crates/eficore/: Cargo.toml
crates/eficore/src/: bootloader_interface.rs  env.rs  framebuffer.rs  handle.rs  lib.rs  loader.rs  media_loader.rs  partition.rs  path.rs  platform.rs  secure.rs  shim.rs  strings.rs  variables.rs
crates/eficore/src/bootloader_interface/: bitflags.rs
crates/eficore/src/loader/: source.rs
crates/eficore/src/platform/: timer.rs  tpm.rs
crates/eficore/src/platform/timer/: aarch64.rs  x86_64.rs
crates/eficore/src/shim/: hook.rs
crates/parsing/: Cargo.toml
crates/parsing/src/: lib.rs
crates/sprout/: Cargo.toml  build.rs
crates/sprout/src/: actions.rs  autoconfigure.rs  context.rs  drivers.rs  entries.rs  extractors.rs  generators.rs  integrations.rs  logger.rs  main.rs  menu.rs  options.rs  phases.rs  sbat.csv  sbat.rs  secure.rs  setup.rs  utils.rs
crates/sprout/src/actions/: chainload.rs  edera.rs  print.rs
crates/sprout/src/autoconfigure/: bls.rs  linux.rs  windows.rs
crates/sprout/src/config/: loader.rs
crates/sprout/src/extractors/: filesystem_device_match.rs
crates/sprout/src/generators/: bls.rs  list.rs  matrix.rs
crates/sprout/src/generators/bls/: entry.rs
crates/sprout/src/integrations/: bootloader_interface.rs  shim.rs
crates/sprout/src/integrations/shim/: hook.rs
crates/sprout/src/options/: env.rs  parser.rs
crates/sprout/src/platform/: timer.rs  tpm.rs
crates/sprout/src/platform/timer/: aarch64.rs  x86_64.rs
crates/sprout/src/utils/: framebuffer.rs  variables.rs  vercmp.rs
docs/: alpine-edge-setup.md  fedora-setup.md  generic-linux-setup.md  release.md  ubuntu-secure-boot-setup.md  windows-setup.md
docs/setup/signed/: debian.md  fedora.md  opensuse.md  ubuntu.md
docs/setup/unsigned/: alpine-edge.md  fedora.md  generic-linux.md  windows.md
hack/: assemble.sh  autofix.sh  boot.sh  build.sh  clean.sh  common.sh  format.sh
hack/ci/: upload-release-assets.sh
hack/configs/: kernel.sprout.toml  kernel.sprout.yaml
hack/dev/: boot.sh  build.sh
hack/dev/boot/: Dockerfile
hack/dev/configs/: all.sprout.toml  autoconfigure.sprout.toml  bls.conf  edera.sprout.toml  kernel.sprout.toml  shell.sprout.toml  xen.cfg  xen.sprout.toml
hack/dev/kernel/: Dockerfile  docker-build.sh  docker-install.sh
hack/dev/utils/: Dockerfile.copy-direct  Dockerfile.copy-polyfill
hack/dev/vm/: Dockerfile.initramfs  Dockerfile.ovmf  Dockerfile.xen
hack/utils/: Dockerfile.copy  Dockerfile.copy-direct  Dockerfile.copy-polyfill
kernel/: Dockerfile
src/: actions.rs  autoconfigure.rs  chainload.rs  config.rs  context.rs  drivers.rs  entries.rs  extractors.rs  generators.rs  integrations.rs  main.rs  menu.rs  modules.rs  options.rs  phases.rs  platform.rs  sbat.rs  sbat.template.csv  setup.rs  utils.rs
src/actions/: chainload.rs  edera.rs  print.rs  splash.rs
src/autoconfigure/: bls.rs  linux.rs  windows.rs
src/config/: loader.rs
src/extractors/: filesystem.rs  filesystem_device_match.rs
src/generators/: bls.rs  list.rs  matrix.rs
src/generators/bls/: entry.rs
src/integrations/: bootloader_interface.rs  shim.rs
src/integrations/bootloader_interface/: bitflags.rs
src/integrations/shim/: hook.rs
src/modules/: chainloader.rs
src/options/: parser.rs
src/platform/: timer.rs  tpm.rs
src/platform/timer/: x86_64.rs
src/utils/: framebuffer.rs  linux_media_initrd.rs  media_loader.rs  variables.rs  vercmp.rs
src/utils/media_loader/: constants.rs
vm/: Dockerfile.initramfs  Dockerfile.ovmf
