[workspace]
members = [
  "crates/sprout",
]
resolver = "3"

[profile.dev]
# We have to compile for opt-level = 2 due to optimization passes
# which don't handle the UEFI target properly.
opt-level = 2

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0
opt-level = 2
