[workspace]
members = [
  "crates/build",
  "crates/config",
  "crates/eficore",
  "crates/sprout",
]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
version = "0.0.22"
homepage = "https://sprout.edera.dev"
repository = "https://github.com/edera-dev/sprout"
edition = "2024"

[workspace.dependencies]
bitflags = "2.10.0"
log = "0.4.28"
spin = "0.10.0"
uefi-raw = "0.12.0"

[workspace.dependencies.anyhow]
version = "1.0.100"
default-features = false

[workspace.dependencies.hex]
version = "0.4.3"
default-features = false
features = ["alloc"]

[workspace.dependencies.serde]
version = "1.0.228"
default-features = false
features = ["alloc", "derive"]

[workspace.dependencies.sha2]
version = "0.10.9"
default-features = false

[workspace.dependencies.shlex]
version = "1.3.0"
default-features = false

[workspace.dependencies.toml]
version = "0.9.8"
default-features = false
features = ["serde", "parse"]

[workspace.dependencies.uefi]
version = "0.36.0"
default-features = false
features = ["alloc", "global_allocator", "panic_handler"]

# Common build profiles
# NOTE: We have to compile everything for opt-level = 2 due to optimization passes
# which don't handle the UEFI target properly.
[profile.dev]
opt-level = 2

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0
opt-level = 2
