[package]
name = "edera-sprout-config"
description = "Sprout Configuration"
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies.serde]
workspace = true
default-features = false

[lib]
name = "edera_sprout_config"
