[package]
name = "edera-sprout"
description = "Modern UEFI bootloader"
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
edera-sprout-config.path = "../config"
hex.workspace = true
sha2.workspace = true
shlex.workspace = true
spin.workspace = true
toml.workspace = true
log.workspace = true

[dependencies.uefi]
workspace = true
features = ["alloc", "global_allocator", "panic_handler"]

[dependencies.uefi-raw]
workspace = true

[[bin]]
name = "sprout"
path = "src/main.rs"
