[package]
name = "edera-sprout"
description = "Modern UEFI bootloader"
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
edera-sprout-config.path = "../config"
edera-sprout-eficore.path = "../eficore"
hex.workspace = true
sha2.workspace = true
shlex.workspace = true
toml.workspace = true
log.workspace = true
uefi.workspace = true
uefi-raw.workspace = true

[build-dependencies]
edera-sprout-build.path = "../build"

[[bin]]
name = "sprout"
path = "src/main.rs"
